# ai-money-mentor

./: .env.example  .gitignore  README.md  hard_reset.py  main.py  pyproject.toml  requirements.txt  seed_db.py  setup_project.py
app/: main.py
app/agents/: analyzer.py  base.py  compliance_guardian.py  data_collector.py  doc_scanner.py  financial_news.py  fire_planner.py  money_health.py  orchestrator.py  portfolio_xray.py  task_distributor.py  tax_wizard.py
app/agents/tools/: enriched_mf_tool.py  mfapi_tool.py
app/api/: dependencies.py
app/api/endpoints/: accounts.py  auth.py  chat.py  documents.py  fire.py  goals_debts.py  health_score.py  news.py  portfolio.py  tax_wizard.py  transactions.py
app/core/: config.py  database.py  security.py
app/data/: test_data.json
app/models/: institutional_mf.py  portfolio.py  user.py
app/schemas/: finance.py  financial_data.py  user.py
app/services/calculators/: fire_calculator.py  health_scorer.py  portfolio_analyzer.py  tax_calculator.py  tax_logic.py
app/services/document_parser/: aa_handler.py
app/services/llm_engine/: agents.py  analyzer_agent.py  client.py  collector.py  compliance_agent.py  fire_agent.py  graph.py  health_agent.py  portfolio_agent.py  prompts.py
app/utils/: constants.py  formatters.py
frontend/: clean.js  clean_html.mjs  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/data/: mockProfiles.js
frontend/src/pages/: AIChatPage.jsx  AIMentorPage.jsx  AccountsPage.jsx  AuthPage.jsx  BudgetPage.jsx  DashboardPage.jsx  (+8 more)
scripts/: seed_mf_data.py
(+10 files in other folders)
