[project]
name = "ai-money-mentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.3",
    "litellm>=1.50.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-mistralai>=0.1.0",
    "langchain-groq>=0.1.0",
    "langgraph-checkpoint[sqlite]>=0.0.1",
    "langgraph-sdk>=0.0.1",
    "langgraph-prebuilt>=0.0.1",
    "langgraph-sdk[langsmith]>=0.0.1",
    "langgraph-sdk[langfuse]>=0.0.1",
    "langgraph-sdk[wandb]>=0.0.1",
    "langgraph-sdk[mlflow]>=0.0.1",
    "langgraph-sdk[tensorboard]>=0.0.1",
    "langgraph-sdk[comet]>=0.0.1",
    "langgraph-sdk[neptune]>=0.0.1",
    "langgraph-sdk[clearml]>=0.0.1",
    "langgraph-sdk[weights-and-biases]>=0.0.1",
]
